--- a/client/components/post-placeholder/styles.scss
+++ b/client/components/post-placeholder/styles.scss
@@ -1,68 +1,78 @@
-.post-placeholder {
-  display: flex;
-  flex-direction: column;
-  justify-content: left;
-  margin: 0 0 30px;
-  padding: 0 25px;
-  width: 100%;
+@keyframes post-placeholder__loading-pulse {
+	0% { opacity: .5; }
+	50% { opacity: 1; }
+	100% { opacity: .5; }
+}
 
-  @media #{$tablet-wide} {
-    padding: 0;
-  }
+.post-placeholder {
+	display: flex;
+	flex-direction: column;
+	justify-content: left;
+	margin: 0 0 30px;
+	padding: 0 25px;
+	width: 100%;
+
+	@media #{$tablet-wide} {
+		padding: 0;
+	}
 }
 
 .post-placeholder__title {
-  animation-duration: 1.5s;
-  animation-iteration-count: infinite;
-  animation-name: loading-pulse;
-  background-color: $light-grey;
-  height: 45px;
-  margin: 0 0 10px;
-  width: 75%;
+	animation-duration: 1.5s;
+	animation-iteration-count: infinite;
+	animation-name: post-placeholder__loading-pulse;
+	background-color: $color-gray-10;
+	background-color: var( --color-border );
+	height: 45px;
+	margin: 0 0 10px;
+	width: 75%;
 }
 
 .post-placeholder__meta {
-  display: flex;
-  flex-direction: row;
-  margin: 0 0 30px;
-  width: 100%;
+	display: flex;
+	flex-direction: row;
+	margin: 0 0 30px;
+	width: 100%;
 }
 
 .post-placeholder__meta-button {
-  animation-duration: 1.5s;
-  animation-iteration-count: infinite;
-  animation-name: loading-pulse;
-  background-color: $light-grey;
-  border-radius: 4px;
-  height: 22px;
-  margin: 0 7px;
-  width: 40px;
+	animation-duration: 1.5s;
+	animation-iteration-count: infinite;
+	animation-name: post-placeholder__loading-pulse;
+	background-color: $color-gray-10;
+	background-color: var( --color-border );
+	border-radius: 4px;
+	height: 22px;
+	margin: 0 7px;
+	width: 40px;
 
-  &:first-child {
-    margin-left: 0;
-  }
+	&:first-child {
+		margin-left: 0;
+	}
 }
 
 .post-placeholder__meta-date {
-  animation-duration: 1.5s;
-  animation-iteration-count: infinite;
-  animation-name: loading-pulse;
-  background-color: $light-grey;
-  height: 18px;
-  margin-left: 5px;
-  width: 80px;
+	animation-duration: 1.5s;
+	animation-iteration-count: infinite;
+	animation-name: post-placeholder__loading-pulse;
+	background-color: $color-gray-10;
+	background-color: var( --color-border );
+	height: 18px;
+	margin-left: 5px;
+	width: 80px;
 }
 
 .post-placeholder__content-line {
-  animation-duration: 1.5s;
-  animation-iteration-count: infinite;
-  animation-name: loading-pulse;
-  background-color: $light-grey;
-  height: 18px;
-  margin: 0 0 20px;
-  width: 100%;
+	animation-duration: 1.5s;
+	animation-iteration-count: infinite;
+	animation-name: post-placeholder__loading-pulse;
+	background-color: $color-gray-10;
+	background-color: var( --color-border );
+	height: 18px;
+	margin: 0 0 20px;
+	width: 100%;
 
-  &:last-child {
-    width: 50%;
-  }
+	&:last-child {
+		width: 50%;
+	}
 }
