--- a/client/views/home/styles.scss
+++ b/client/views/home/styles.scss
@@ -1,5 +1,6 @@
 .home-view__view-all {
-	color: $black;
+	color: $color-gray-100;
+	color: var( --color-accent );
 	font-family: $headers;
 	font-size: 24px;
 	font-weight: bold;
