--- a/client/components/page-header/styles.scss
+++ b/client/components/page-header/styles.scss
@@ -1,5 +1,6 @@
 .page-header {
-	color: $black;
+	color: $color-gray-100;
+	color: var( --color-accent );
 	font-family: $headers;
 	font-size: 40px;
 	font-weight: 900;
