--- a/client/components/pagination/styles.scss
+++ b/client/components/pagination/styles.scss
@@ -9,7 +9,8 @@
 .pagination__button, .pagination__placeholder {
 	background: transparent;
 	border: 0;
-	color: $black;
+	color: $color-gray-100;
+	color: var( --color-neutral );
 	cursor: pointer;
 	font-weight: bold;
 	font-size: 16px;
@@ -19,9 +20,11 @@
 	width: 24px;
 
 	&.is-active {
-		background-color: $black;
+		background-color: $color-gray-100;
+		background-color: var( --color-accent );
 		border-radius: 3px;
-		color: $white;
+		color: $color-white;
+		color: var( --color-text-inverted );
 		height: 26px;
 		margin: 0 1px;
 		width: 26px;
@@ -31,7 +34,8 @@
 		cursor: default;
 
 		&:first-child, &:last-child {
-			color: $dark-grey;
+			color: $color-gray-20;
+			color: var( --color-text-subtle );
 		}
 	}
 }
