--- a/client/components/post-footer/styles.scss
+++ b/client/components/post-footer/styles.scss
@@ -20,8 +20,10 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  border-top: 1px solid $medium-grey;
-  border-bottom: 1px solid $medium-grey;
+  border-color: $color-gray-10;
+  border-color: var( --color-border );
+  border-style: solid;
+  border-width: 1px 0 1px;
   margin: 0 0 20px;
 }
 
@@ -46,13 +48,15 @@
 
 .post-footer__link-label {
   display: block;
-  color: $medium-grey;
+  color: $color-gray-20;
+  color: var( --color-text-subtle );
   font-weight: bold;
 }
 
 .post-footer__link-title {
   font-family: $headers;
-  color: $text-headers;
+  color: $color-gray-100;
+  color: var( --color-neutral );
   font-size: 22px;
   font-weight: bold;
 }
