--- a/client/components/search-form/styles.scss
+++ b/client/components/search-form/styles.scss
@@ -11,10 +11,13 @@
 }
 
 .search-form__input {
-	border: 0;
-	border-bottom: 1px solid $black;
+	border-color: $color-gray-100;
+	border-color: var( --color-primary );
 	border-radius: 0;
-	color: $black;
+	border-style: solid;
+	border-width: 0 0 1px;
+	color: $color-gray-100;
+	color: var( --color-neutral );
 	flex: 1;
 	font-size: 22px;
 	height: 40px;
@@ -23,15 +26,17 @@
 	padding: 0 10px;
 	width: 0;
 
-	&::placeholder {
-		color: $dark-grey;
+	&:placeholder {
+		color: $color-gray-20;
+		color: var( --color-text-subtle );
 	}
 }
 
 .search-form__button {
 	background: transparent;
 	border: 0;
-	color: $black;
+	color: $color-gray-100;
+	color: var( --color-neutral );
 	font-size: 22px;
 	height: 40px;
 	line-height: 40px;
