--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -1,4 +1,4 @@
-@import "~highlightjs/styles/github.css";
+@import "~highlight.js/styles/github.css";
 
 @import "./config.scss";
 @import "./themes.scss";
