--- a/client/components/post-content/styles.scss
+++ b/client/components/post-content/styles.scss
@@ -2,6 +2,10 @@
 	margin-top: 0;
 }
 
+.post-content > *:last-child {
+	margin-bottom: 0;
+}
+
 .post-content h1, .post-content h2, .post-content h3,
 .post-content h4, .post-content h5, .post-content h6,
 .post-content p, .post-content a, .post-content li,
