--- a/client/components/post-footer/styles.scss
+++ b/client/components/post-footer/styles.scss
@@ -1,6 +1,7 @@
 .post-footer {
   display: flex;
   flex-direction: column;
+  margin: 30px 0 0;
   padding: 0 25px;
   width: 100%;
 
@@ -33,7 +34,7 @@
   flex: 1;
   padding: 30px 20px;
 
-  &.is-next {
+  &.is-prev {
     text-align: right;
   }
 
