Update header styles

--- a/client/components/post-header/styles.scss
+++ b/client/components/post-header/styles.scss
@@ -16,7 +16,8 @@
 	font-family: $headers;
 	font-size: 45px;
 	font-weight: bold;
-	margin: 0 auto;
+	line-height: 45px;
+	margin: 0 auto 10px;
 	width: 100%;
 }
 
